fix popup size on firefox

--- a/src/popup/app.scss
+++ b/src/popup/app.scss
@@ -1,9 +1,21 @@
 @import "toastr";
 
-#app {
+body {
     width: 400px;
     height: 320px;
+
+    margin: 0;
+    padding: 0;
+
+    font-family: sans-serif;
+    font-size: 14px;
+    border-radius: 5px;
+}
+
+#app {
     transition: height 0.2s ease-in-out;
+    height: 100%;
+    overflow: hidden;
 
     .container {
         background-color: var(--background);
@@ -82,12 +94,4 @@
             }
         }
     }
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    font-size: 14px;
-    border-radius: 5px;
 }
